--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,14 @@
 <html lang="en">
 	<head>
 		<title>Eat-Da-Burger App</title>
+        
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+        
+        <link rel="stylesheet" href="../../public/assets/css/burger_style.css">
 	</head>
 	<body>
 		{{{ body }}}
