--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,8 +1,34 @@
-body {
+html { 
+    background: url("../img/bg2.jpeg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     background-color: bisque;
-    background-image: url("../img/bg.jpeg");
 }
 
-#burger-box {
-    background-color: rgb(255,255,255, .8);
+body {
+}
+
+.logo {
+    display: block;
+    margin: 0 auto;
+}
+
+.burger-box {
+    margin: 0 20px;   
+}
+
+.titles {
+    font-family: Roboto;
+    font-weight: 500;
+    text-align: center;
+    color: white;
+}
+
+.bodyText {
+    font-size: 15px;
+    font-weight: 300;
+    color: white;
+    text-align: center;
 }
