--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -32,3 +32,16 @@ body {
     color: white;
     text-align: center;
 }
+
+.input-field input[type=text]:focus + label {
+     color: #000;
+}
+
+.input-field input[type=text] :focus {
+     border-bottom: 1px solid #000;
+     box-shadow: 0 1px 0 0 #000;
+}
+
+input:-ms-input-placeholder {  
+color: red !important;  
+}
